...
        button.layer.borderWidth = 2
        button.layer.cornerRadius = 2

        button.setContentHuggingPriority(.defaultHigh, for: .horizontal)
        button.setContentCompressionResistancePriority(.required, for: .horizontal)
        button.setContentCompressionResistancePriority(.required, for: .vertical)
        button.accessibilityIdentifier = "settingsLogoutButton"
        return button
    }()

    lazy var privacyButton: MultilineButton = {
        let button = MultilineButton()
        button.translatesAutoresizingMaskIntoConstraints = false
...

        let title = NSMutableAttributedString(string: "PrivacyPolicy.Title".localized, attributes: attributes)
        button.setAttributedTitle(title, for: .normal)
        button.contentEdgeInsets = UIEdgeInsets(top: 13, left: 0, bottom: 13, right: 0)
        button.contentHorizontalAlignment = .left
        button.addTarget(self, action: #selector(policyTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "settingsPrivacyButton"
        return button
    }()

    lazy var separatorView: UIView = {
        let view = UIView()
        view.translatesAutoresizingMaskIntoConstraints = false
...
