...
        titleLabel.adjustsFontForContentSizeCategory = true
        titleLabel.numberOfLines = 0
        titleLabel.font = .custom(.bold, size: 34, forTextStyle: .title1)
        titleLabel.textAlignment = .center
        titleLabel.textColor = .appMainText
        titleLabel.text = "PrivacyPolicy.Title".localized
        titleLabel.accessibilityIdentifier = "privacyPolicyTitle"
        return titleLabel
    }()

    lazy var textView: UITextView = {
        let textView = UITextView()
        textView.adjustsFontForContentSizeCategory = true
...
